<resources>
    <string name="app_name">CareHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locate">LOCATE</string>
    <string name="hospital_name">hospital name</string>
    <string name="avgopenhour">open hour</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address_content">address content</string>
    <string name="workhours_content">workhours content</string>
    <string name="contact_email_content">contact email</string>
    <string name="contact_web_content">web content</string>
    <string name="contact_phone_content">contact phone content</string>
    <string name="open_times">Open Times:</string>
    <string name="contact">Contact</string>
    <string name="todo">TODO</string>
    <string name="address">Address</string>
    <string name="content_name">content name</string>
    <string name="title_activity_maps">Map</string>
    <string name="account">Account</string>
    <string name="phone_number_auth">Phone Number Authorization</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="_62">+62</string>
    <string name="continue_">Continue</string>
    <string name="setting">Setting</string>
    <string name="dark_theme">dark theme</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="save">save</string>
    <string name="setting_page">Setting</string>
    <string name="title">title</string>
    <string name="submit">submit</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
</resources>