<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/place_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/locate_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/name_place"
            android:layout_alignEnd="@+id/name_place"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/locate"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/name_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/place_photo"
            android:text="@string/hospital_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/open_hour_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_place"
            android:layout_alignStart="@+id/name_place"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/avgopenhour" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>